# kechimochi

./: .gitignore  CHANGELOG.md  Development.md  Dockerfile  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: android-e2e.yml  android-release-build.yml  docker.yml  publish.yml  release.yml  test.yml  win-test-build.yml
coverage/: coverage-final.json  coverage-summary.json  index.html
coverage/src/: api.ts.html  app_shell.ts.html  app_version.ts.html  constants.ts.html  index.html  jiten_api.ts.html  main.ts.html  platform.ts.html  sync_enablement.ts.html  theme_sync.ts.html  types.ts.html  (+1 more)
docs/: csv-formats.md  release-process.md
e2e/: wdio.conf.ts
scripts/: extract-changelog.mjs  set-version.mjs
src/: activity_modal.ts  api.ts  app_version.ts  back_stack.ts  calendar.ts  constants.ts  database_recovery.ts  jiten_api.ts  main.ts  milestone_modal.ts  modal_base.ts  modals.ts  performance.ts  release_notes.ts  styles.css  sync_enablement.ts  theme.ts  theme_sync.ts  themes.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: covers.rs  csv_import.rs  db.rs  lib.rs  models.rs
src-tauri/server/: Cargo.toml
src-tauri/server/src/: main.rs  routes.rs  state.rs
src-tauri/server/tests/: api_tests.rs
tests/: api.test.ts  app_version.test.ts  database_recovery.test.ts  jiten_api.test.ts  main.test.ts  main.update_badge.test.ts  setup.ts  theme.test.ts  theme_sync.test.ts  themes.test.ts
(+307 files in other folders)
