[package]
name = "kechimochi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
